--- a/pokemon-front-end/src/App.css
+++ b/pokemon-front-end/src/App.css
@@ -56,7 +56,7 @@
   position: absolute;
   width: 32px;
   height: 32px;
-  background: #fff;
+  background: green;
   animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .lds-heart div:after,
