--- a/pokemon-front-end/src/App.css
+++ b/pokemon-front-end/src/App.css
@@ -40,6 +40,14 @@
   background-color: red;
 }
 
+.deal {
+  height: 100px;
+  width: 200px;
+  margin-right: 20px;
+  background-color: blue;
+}
+
+
 
 /* Loader */
 .lds-heart {
