--- a/pokemon-front-end/src/App.css
+++ b/pokemon-front-end/src/App.css
@@ -107,6 +107,21 @@
   color: red;
 }
 
+.winorlose {
+  height: 70px;
+  width: 200px;
+  position: fixed;
+  top: 10px;
+  right: 50vw;
+  color: yellow;
+  border: 1px solid yellow;
+  border-radius: 10px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 /* Loader */
